--- a/style/style_main.css
+++ b/style/style_main.css
@@ -71,7 +71,7 @@
     color: rgba(255, 255, 255, 0.5);
 }
 
-
+.ooops,
 .input {
     display: block;
     font-family: Inter;
@@ -89,6 +89,7 @@
     margin-bottom: 36px;
 }
 
+.tryAgain,
 .find {
     display: block;
     margin: 0 auto;
@@ -116,4 +117,14 @@
     border: none;
     background: transparent;
     cursor: pointer;
+}
+
+.errorInfo {
+    font-family: Inter;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15px;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.75);
+    margin-bottom: 55px;
 }
